codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__account_status_after_identity_without_email.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "chat.status_line_value_for_item(crate::bottom_pane::StatusLineItem::AccountStatus).expect(\"account status should render\")"
---
Business
