codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__completed_response_after_prior_item_delta.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: rendered
---
› Partial response before retry.

› Completed response after retry.
